2013-01-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keys.cc: Missing is_movement initializer for ActionScrollLeft. Warnings.
	Rev 7332
	* all: Eliminating more warnings.
	* imagewin/savepcx.cc: malloc/free to new[]/delete[].
	* audio/midi_drivers/mt32emu/freeverb.h: Updated handling of denormals.
	Rev 7333
	* all: Eliminating more warnings.
	* audio/midi_drivers/fmopl.cpp: malloc/free to new[]/delete[].
	* audio/midi_drivers/timidity/timidity.cpp: Reformatted for more consistent
	  spacing.
	Rev 7334
	* audio/midi_drivers/mt32emu/*: Last MT32Emu warnings I will eliminate until
	  bug #3149070 "MT-32: sysex is not delayed properly (exc. buffer overflow)"
	  is fixed.
	Rev 7335
	* gamedat.cc: Fixed regression from rev #7332 causing corruption on the save
	  screen.
	Rev 7336
	* usecode/ucinternal.cc: Also print usecode function number in debug tracing
	  if the function has an associated name.

2013-01-24	Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Gump_manager.cc: Fix main_actor_can_act check that could be bypassed
	  if double click closes gumps was disabled.
	* exult.cc, gumps/Gump_button.h, gumps/misc_buttons.h: Allow left clicking
	  on a check mark even when the Avatar cannot move. This fixes bug
	  #3598889 "HP < 1 will not allow you to close gumps with the check mark".

2013-01-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: A few improvements to charm alignment, which is now generally
	  updated when alignment is and the NPC is not charmed. Inverted rev #7300
	  so that only goblins in goblin ville are always on the lookout for foes.
	  This matches the originals, in which only combat and patrol schedules will
	  seek foes and fixes bug #3601595 "Bee's in Bee Cave Hostile before picking
	  up honey".
	Rev 7323
	* gamewin.cc: Fixed bug #3601596 "Music in Bee Cave conflict".
	Rev 7324
	* actions.*: Improved pickup/put down action to show the standing frame at